template/templates/carpenters/css/modules.css
/* @group modules */
.moduletable {}

/* @group hmenu */
.moduletable_hmenu.primary {
	background: url('../images/bg_menu.jpg') bottom center no-repeat;
	padding: 40px 0 6px 0;
	font-size: 14px;
	text-align:center;
}

.moduletable_hmenu.primary > ul {
	margin: 0;
	padding: 0;
}

.moduletable_hmenu.primary > ul > li:first-child {background: none;}
.moduletable_hmenu.primary > ul > li {
	background: url('../images/divider_menuItems.png') left center no-repeat;
	display: inline-block;
	*display: inline;
	*zoom: 1;
	position: relative;

	padding: 0 37px;
	line-height: 47px;
}

.moduletable_hmenu.primary a {
	color: #000000;
}

.moduletable_hmenu.primary a:hover,
.moduletable_hmenu.primary a:active {
	color: #d72229;
	text-decoration: none;
}

.moduletable_hmenu.header {
	float: right;
	font-size: 12px;
	margin: 20px 0 0 0;
}

.moduletable_hmenu.header > ul {
	margin: 0;
	padding: 0;
}

.moduletable_hmenu.header > ul > li:first-child {border: none;}
.moduletable_hmenu.header > ul > li {
	border-left: 1px solid #d72229;
	display: inline-block;
	*display: inline;
	*zoom: 1;
	position: relative;
	line-height: 12px;
	padding: 0 10px;
}

.moduletable_hmenu.header a {
	color: #d72229;
}

.moduletable_hmenu.header a:hover,
.moduletable_hmenu.header a:active {
	color: #d72229;
}

.moduletable_hmenu.secondary {
	font-size: 10px;
	line-height: 9px;
}

.moduletable_hmenu.secondary > ul {
	margin: 0 0 10px 0;
	padding: 0;
}

.moduletable_hmenu.secondary > ul > li:first-child {border: none; padding: 0 8px 0 0;}
.moduletable_hmenu.secondary > ul > li {
	border-left: 1px solid #d72229;
	display: inline-block;
	*display: inline;
	*zoom: 1;
	position: relative;
	padding: 0 8px;
}

.moduletable_hmenu.secondary a {
	position: relative;
	top:1px;
}

/*masthead*/

/*sidebar*/
#sidebar .moduletable:first-child {margin-top: 0px;}
#sidebar .moduletable {margin-top: 30px;}

.moduletable.recentNewsStyle {margin-top: 15px;}
.moduletable.recentNewsStyle .newsflash ul {margin: 0px -6px 0px -8px; padding: 8px 6px 7px 8px;}
.moduletable.recentNewsStyle .newsflash ul:hover {background: #f7f7f7;}
/*footer*/

